# globgroups.rust

./: .gitignore  Cargo.toml  README.md
misc/: globgroups.py
src/: cli.rs  expand.rs  lib.rs  parse.rs
