[package]
name = "globgroups"
description = "Expands groups like foo{a,b}"
version = "0.1.0-beta.1"
edition = "2021"
license = "BlueOak-1.0.0"
readme = "README.md"
repository = "https://github.com/Techcable/globgroups.rust"

[dependencies]
thiserror = "1"
itertools = "0.12.1"
smallvec = "~2.0.0-alpha.4"  # TODO: Replace with stable release?
# Use chumsky for parsing
chumsky = "0.9"

[[bin]]
name = "groupglobs"
path = "src/cli.rs"
